# sefer-alloc

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  package.json  run_tsan.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  kani.yml  perf-gate.yml  release.yml
benches/: byte_alloc.rs  byte_sharded.rs  directory_threshold_probe.rs  global_alloc.rs  heap_alloc.rs  heap_async_pattern.rs  heap_fanin_persistent.rs  heap_fanin_production.rs  heap_lifecycle_teardown.rs  heap_xthread.rs  large_realloc.rs  locality.rs  medium_size_sweep.rs  numa_current_node_cache.rs  perf_gate_iai.rs  pinned_write.rs  r12_7_class_aware_dirty_wallclock.rs  r13_3_virgin_zero_skip_wallclock.rs  r13_6_exact_span_reserved_capacity_wallclock.rs  segment_directory_sweep.rs  segment_table_delete_cluster.rs  sharded_write.rs
crates/globalalloc-model/: Cargo.toml  README.md
crates/globalalloc-model/src/: arbitrary_stream.rs  lib.rs  strategy.rs
crates/globalalloc-model/tests/: miri_bounded.rs  system_arbitrary.rs  system_proptest.rs
crates/malloc-bench/: Cargo.toml  README.md
crates/malloc-bench/examples/: compare.rs
crates/malloc-bench/src/: lib.rs
crates/malloc-bench/tests/: smoke.rs
crates/numa/: Cargo.toml  README.md
crates/numa/src/: lib.rs
crates/numa/tests/: mock_dispatch.rs  smoke.rs
crates/proc-memstat/: Cargo.toml  README.md
crates/proc-memstat/src/: lib.rs
crates/proc-memstat/tests/: monotonicity.rs
crates/proc-probe/: Cargo.toml  README.md
crates/proc-probe/src/: lib.rs
crates/proc-probe/tests/: protocol.rs
crates/racy-ptr-cell/: Cargo.toml  README.md
crates/racy-ptr-cell/src/: lib.rs
crates/racy-ptr-cell/tests/: cell_unit.rs  loom_racy_ptr_cell.rs
crates/region/: Cargo.toml  README.md
crates/region/src/: lib.rs  region.rs  sync_region.rs
crates/region/tests/: smoke.rs
crates/ring-mpsc/: Cargo.toml  LICENSE-MIT  README.md
crates/ring-mpsc/src/: lib.rs
crates/ring-mpsc/tests/: loom_ring_mpsc.rs  ring_unit.rs
crates/size-classes/: Cargo.toml  README.md
crates/size-classes/src/: lib.rs
crates/size-classes/tests/: builder.rs  proptest_builder.rs
crates/tagged-index-stack/: Cargo.toml  README.md
crates/tagged-index-stack/src/: lib.rs
crates/tagged-index-stack/tests/: loom_aba.rs  regression_counter_wrap.rs  stack_unit.rs
crates/vmem/: Cargo.toml  LICENSE-APACHE  README.md
crates/vmem/src/: error.rs  fault_injection.rs  lib.rs  mock.rs
crates/vmem/tests/: fault_injection.rs  lazy_commit.rs  mock.rs  smoke.rs
docs/: ALLOC_BENCH.md  ALLOC_PLAN.md  ALLOC_PLAN_PHASE12-13.md  ARCHITECTURE.md  BENCHMARKS.md  BYTE_BENCH.md  BYTE_SHARDED_BENCH.md  CROSS_THREAD_STATE_MACHINES.md  DESIGN.md  DURABILITY.md  FASTBIN_DESIGN.md  FINDINGS_PHASE12.md  GLOSSARY.md  HEAP_BENCH.md  INTEGRATION.md  INVARIANTS.md  MALLOC_BENCH.md  MALLOC_PLAN.md  MALLOC_PLAN_PHASE12-13.md  NUMA_RELEASE_GATE.md  NUMA_TESTING_OPTIONS.md  NUMA_WINDOWS_DEV_RECIPE.md  PHASE13_4_DEALLOC_DESIGN.md  PHASE35_DECOMMIT_DESIGN.md  PHASE_NUMA_DESIGN.md  PLAN.md  PROFILE_FLAMEGRAPHS.md  RACE_DRAIN_RECLAIM.md  UB_MEMORY_AUDIT.md
docs/agent_reports/: memory_safety_audit.md  performance_opportunities.md
docs/agent_reports_round2/: code_cleanup_review.md  memory_safety_audit.md  performance_opportunities.md
docs/agent_reviews_round3/: code_quality_review.md  memory_safety_review.md  performance_review.md
docs/agent_reviews_round4/: code_quality_review.md  memory_safety_review.md  (+1 more)
examples/: dealloc_only_unbound_thread.rs  first_alloc_process.rs  global_allocator.rs  malloc_macro.rs  paired_ab_class_aware_dirty_off.rs  paired_ab_class_aware_dirty_on.rs  paired_ab_large_cache_extended_off.rs  paired_ab_large_cache_extended_on.rs  paired_ab_large_cache_off.rs  paired_ab_large_cache_on.rs  paired_ab_medium_off.rs  paired_ab_medium_on.rs  paired_ab_mimalloc.rs  paired_ab_sefer.rs  paired_ab_system.rs  r11_3_promotion_probe.rs  r12_3_exact_span_measure.rs  r12_4_reserved_capacity_measure.rs  r13_6_large_cache_hit_rate_measure.rs  r13_7_large_cache_extended_hit_rate_measure.rs  r13_8_medium_working_set_judge.rs  r13_9_class_aware_dirty_sidecar_rss.rs  r14_4_pad_target_probe.rs  r14_5_large_cache_extended_rss_measure.rs  rss_probe.rs  soak_xthread.rs  tokio_burn_in.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/global_alloc_ops/: seed_churn  seed_small_alloc  seed_zeroed_realloc_bigalign
fuzz/corpus/heap_core_ops/: seed_churn  seed_small_alloc_dealloc  seed_zeroed_realloc
fuzz/corpus/region_ops/: seed_insert_get
fuzz/fuzz_targets/: global_alloc_ops.rs  heap_core_ops.rs  region_ops.rs
scripts/: _r14_3_class_aware_dirty_ab.json  _r14_5_large_cache_extended_turnover_ab.json  asan.mjs  bench-table.mjs  check-all.mjs  dealloc-only-bench.mjs  first-alloc-bench.mjs  fuzz.mjs  iai.mjs  lib.mjs  loom.mjs  miri.mjs  paired-ab-runner.mjs  r10_2_medium_gate.mjs  r10_5_large_cache_gate.mjs  tsan.mjs
src/: handle.rs  kani_proofs.rs  lib.rs  region.rs  sync_region.rs
tests/: alloc_core_batch.rs  alloc_core_differential.proptest-regressions  alloc_core_differential.rs  alloc_core_invariants.rs  alloc_core_reentrancy.rs  alloc_zeroed_fresh_large_skip.rs  alloc_zeroed_virgin_small_skip.rs  asan_alloc_core.rs  batch_tcache.rs  byte.rs  byte_sharded.rs  class_aware_dirty_oom_latch.rs  class_aware_dirty_routing.rs  compaction.rs  concurrent_stress.rs  dealloc_only_no_bind.rs  dealloc_only_no_bind_torn.rs  dealloc_sublinear.rs  decommit_miri_cycle.rs  decommit_soak.rs  decommit_stale_ring.rs  differential.rs  directory_authoritative_miss.rs  dirty_directory_incremental_sync.rs  dirty_segments_a4.rs  dirty_segments_a5.rs  double_free_guard.rs  epoch.rs  exact_span_large.rs  fastbin_requires_xthread.rs  global_alloc.rs  global_alloc_installed.rs  global_alloc_mt.rs  heap_core_bulk_bypass.rs  heap_core_tcache.rs  heap_core_tcache_decommit.rs  heap_core_tcache_m2.rs  heap_core_tcache_stamp.rs  heap_cross_segment.rs  heap_cross_thread.rs  (+199 more)
(+273 files in other folders)
